# QR-event-ticketing

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
backend/: backend.py  gen_qr_code.py  print_qr.py  private_key_gen.py  requirements.txt
certs/: cert.pem  key.pem
event-ticketing/: __main__.py  db.py  server.py  utils.py
frontend/: index.html
scripts/: certif_gen.py  gen_qr_code.py  print_qr.py  private_key_gen.py
static/: index.html  login.html
